==> bdring/Grbl_Esp32/Grbl_Esp32/limits.cpp <==
#include "grbl.h"
  #define HOMING_AXIS_SEARCH_SCALAR  1.1 // Must be > 1 to ensure limit switch will be engaged.
  #define HOMING_AXIS_LOCATE_SCALAR  5.0 // Must be > 1 to ensure limit switch is cleared.

void limits_init()
{  
	
  #ifndef DISABLE_LIMIT_PIN_PULL_UP  
    pinMode(X_LIMIT_PIN, INPUT_PULLUP);  // input with pullup
    pinMode(Y_LIMIT_PIN, INPUT_PULLUP);
    pinMode(Z_LIMIT_PIN, INPUT_PULLUP);
	#else
		pinMode(X_LIMIT_PIN, INPUT); // input no pullup
		pinMode(Y_LIMIT_PIN, INPUT);
		pinMode(Z_LIMIT_PIN, INPUT);		
  #endif
   
  if (bit_istrue(settings.flags,BITFLAG_HARD_LIMIT_ENABLE)) {
    // attach interrupt to them
    attachInterrupt(digitalPinToInterrupt(X_LIMIT_PIN), isr_limit_switches, CHANGE);
    attachInterrupt(digitalPinToInterrupt(Y_LIMIT_PIN), isr_limit_switches, CHANGE);
    attachInterrupt(digitalPinToInterrupt(Z_LIMIT_PIN), isr_limit_switches, CHANGE);
  } else {
    limits_disable();
  }
  

// TODO Debounce
/*
  #ifdef ENABLE_SOFTWARE_DEBOUNCE
    MCUSR &= ~(1<<WDRF);
    WDTCSR |= (1<<WDCE) | (1<<WDE);
    WDTCSR = (1<<WDP0); // Set time-out at ~32msec.
  #endif
 */ 
}

uint8_t limits_get_state()
{
  uint8_t limit_state = 0;  
  uint8_t pin = (digitalRead(X_LIMIT_PIN) + (digitalRead(Y_LIMIT_PIN) << Y_AXIS) + (digitalRead(Z_LIMIT_PIN) << Z_AXIS) );

	#ifdef INVERT_LIMIT_PIN_MASK // not normally used..unless you have both normal and inverted switches
    pin ^= INVERT_LIMIT_PIN_MASK;
  #endif	
  
  if (bit_istrue(settings.flags,BITFLAG_INVERT_LIMIT_PINS)) 
	{ 
		pin ^= LIMIT_MASK;
	}
  
  if (pin) {
    uint8_t idx;
    for (idx=0; idx<N_AXIS; idx++) {
      if (pin & get_limit_pin_mask(idx)) { limit_state |= (1 << idx); }
    }
  }
	
  return(limit_state);
  
	
}
